<resources>
    <string name="app_name">cafe</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="name_hint">Имя пользователя:</string>
    <string name="password_hint">Пароль:</string>
    <string name="sign_in_button">Войти</string>
    <string name="greetings">Привет, %s! Что желаете?</string>
    <string name="tea">Чай</string>
    <string name="coffee">Кофе</string>
    <string name="additives">Что добавить в ваш %s?</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="lemon">Лимон</string>
    <string name="choose_drink_type">Выберите типа напитка</string>
    <string name="make_order">Сделать заказ</string>
    <string name="name">Имя:</string>
    <string name="drink">Напиток:</string>
    <string name="drink_type">Тип напитка:</string>
    <string name="additives_word">Добавки:</string>
    <string name="error_fields_empty">Пожалуйста, заполните все поля!</string>
    <array name="types_of_tea">
        <item>Зелёный</item>
        <item>Чёрный</item>
    </array>

    <array name="types_of_coffee">
        <item>Американо</item>
        <item>Раф</item>
        <item>Латте</item>
    </array>
</resources>