<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:contentDescription="@null"
        android:layout_height="0dp"
        android:padding="40dp"
        android:layout_weight="4"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/starbucks" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="16dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/name_hint"/>
    <EditText
        android:layout_weight="0.5"
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/password_hint"/>
    <Button

        android:id="@+id/buttonSignIn"
        android:text="@string/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"/>



</LinearLayout>